[package]
name = "jintemplify_plugin"
version = "0.1.0"
edition = "2021"
description = "jintemplify plugin library"
license = "MIT"
repository = "https://github.com/fantajeon/jintemplify-plugin"
homepage = "https://github.com/fantajeon/jintemplify-plugin"
documentation = "https://github.com/fantajeon/jintemplify-plugin"
authors = ["Hyeokjune Jeon <fantajeon@gmail.com>"]
exclude = ["tests/**", "examples/**"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
