[package]
name = "jintemplify_plugin_macro"
version = "0.1.0"
edition = "2021"
description = "jintemplify plugin proc-macro"
license = "MIT"
repository = "https://github.com/fantajeon/jintemplify-plugin"
homepage = "https://github.com/fantajeon/jintemplify-plugin"
documentation = "https://github.com/fantajeon/jintemplify-plugin"
authors = ["Hyeokjune Jeon <fantajeon@gmail.com>"]
exclude = ["tests/**", "examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
proc-macro = true
